translations: 📚 sync translations with crowdin

--- a/packages/p2p/src/translations/it.json
+++ b/packages/p2p/src/translations/it.json
@@ -167,7 +167,7 @@
     "-170727864": "Torna a DP2P",
     "-1638172550": "Per disabilitare questa funzione, completa quanto segue:",
     "-278618671": "La tua cassa DP2P è bloccata",
-    "-724778838": "Verrà disattivato tra {{days_until_archive}} giorno",
+    "-724778838": "Verrà disattivato tra {{days_until_archive}} giorni",
     "-1561775203": "Acquista {{currency}}",
     "-1527285935": "Vendi {{currency}}",
     "-1654157453": "Tasso fisso (1 {{currency}})",
